--- a/apps/esports/static/esports/styles/components/searchbar.css
+++ b/apps/esports/static/esports/styles/components/searchbar.css
@@ -1,6 +1,6 @@
 .searchbar {
   width: 100%;
-  height: 80px;
+  height: 6vh;
   overflow: hidden;
   transition: 0.5s;
 }
@@ -47,13 +47,10 @@
   height: 100%;
   border: none;
   background-color: transparent;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .searchbox button span {
-  font-size: 50px;
+  font-size: 5vh;
   height: 100%;
   color: #444;
 }
@@ -64,12 +61,15 @@
     width: 70%;
   }
 
-  .searchbox button {
-    width: 30%;
+  .searchbox button {width: 30%;}
+
+  .searchbox button span {font-size: 4vh;}
+}
+
+@media (orientation: landscape) and (max-width: 1024px) {
+  .searchbar {
+    height: 9vh;
   }
 
-  .searchbox button span {
-    font-size: 35px;
-  }
-
+  .searchbox button span {font-size: 7vh;}
 }
