--- a/apps/esports/static/esports/styles/layouts/gallery.css
+++ b/apps/esports/static/esports/styles/layouts/gallery.css
@@ -25,7 +25,6 @@
 }
 
 .topbar-extras span {
-  font-size: 25px;
   margin: 0 10px;
 }
 
@@ -49,7 +48,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 25px;
 }
 
 .matches-container {
@@ -83,10 +81,8 @@
   margin: 25px;
   border-radius: 10px;
   background-color: white;
-  display: grid;
-  grid-template-rows: repeat(2, auto [row-start]);
-  text-decoration: none;
-  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.5);
+  display: flex;
+  flex-direction: column;
 }
 
 .match-card img {
