--- a/smitecentral/static/styles/construction.css
+++ b/smitecentral/static/styles/construction.css
@@ -14,8 +14,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.7);
   color: black;
+  border-radius: 5px;
 }
 
 .construction-message, .construction-navigation, .construction-links {
