--- a/smitecentral/templates/components/footer.html
+++ b/smitecentral/templates/components/footer.html
@@ -4,9 +4,8 @@
             <div class="footer-info">
                 <p>This App Is Part Of <a href="{% url 'central' %}" class="central-tag">Smite Central</a></p>
                 <div class="social-links">
-                    <a href="https://www.facebook.com/" class="mdi mdi-facebook"></a>
-                    <a href="https://www.twitter.com/" class="mdi mdi-twitter"></a>
-                    <a href="https://www.linkedin.com/" class="mdi mdi-linkedin"></a>
+                    <a href="https://twitter.com/bookofpe" class="mdi mdi-twitter"></a>
+                    <a href="https://www.linkedin.com/in/fidel-elie-0aa25712a/" class="mdi mdi-linkedin"></a>
                     <a href="https://www.github.com/fidelElie/" class="mdi mdi-github"></a>
                     <a href="mailto:fidel.elie@australa.co" class="mdi mdi-email"></a>
                 </div>
