--- a/apps/central/templates/central/central.html
+++ b/apps/central/templates/central/central.html
@@ -57,6 +57,7 @@
                 <div class="footer-main">
                     <div class="footer-info">
                         <div class="social-links">
+                            <a href="https://discord.gg/zhGq7jn" class="mdi mdi-discord"></a>
                             <a href="https://www.facebook.com/" class="mdi mdi-facebook"></a>
                             <a href="https://www.twitter.com/" class="mdi mdi-twitter"></a>
                             <a href="https://www.linkedin.com/" class="mdi mdi-linkedin"></a>
