--- a/smitecentral/templates/construction.html
+++ b/smitecentral/templates/construction.html
@@ -13,6 +13,7 @@
                 <p>This Area Of Central Will Be With You Shortly, Follow Our Socials To See When They Are Released:</p>
             </div>
             <div class="construction-links">
+                <a href="https://discord.gg/zhGq7jn" class="mdi mdi-discord"></a>
                 <a href="https://twitter.com/bookofpe" class="mdi mdi-twitter"></a>
                 <a href="https://www.linkedin.com/in/fidel-elie-0aa25712a/" class="mdi mdi-linkedin"></a>
                 <a href="https://www.github.com/fidelElie/" class="mdi mdi-github"></a>
