--- a/apps/esports/templates/esports/search.html
+++ b/apps/esports/templates/esports/search.html
@@ -11,7 +11,7 @@
     <div class="gallery-topbar">
         <div class="topbar-container">
             <div class="topbar-title">
-                <h1>Search Results: {{ query }}</h1>
+                <a href="{% url 'esports' %}"><h1>Search Results: {{ query }}</h1></a>
             </div>
             <div class="topbar-extras">
                 <span class="mdi mdi-magnify" id="search-button"></span>
