--- a/apps/esports/templates/esports/season.html
+++ b/apps/esports/templates/esports/season.html
@@ -7,7 +7,7 @@
     <div class="gallery-topbar">
         <div class="topbar-container">
             <div class="topbar-title">
-                <h1>{{ league }} {{ season }}</h1>
+                <a href="{% url 'esports' %}"><h1>{{ league }} {{ season }}</h1></a>
             </div>
             <div class="topbar-extras">
                 <span class="mdi mdi-magnify" id="search-button"></span>
@@ -23,7 +23,7 @@
 {% block gallery_results %}
     {% for result in  page.object_list %}
         <a href="{% url 'match' result.id %}" class="match-card">
-            <img src="{{ result.thumbnail }}"></img>
+            <img src="{{ result.thumbnail }}" loading="lazy"></img>
             <p>{{ result.title }}</p>
         </a>
     {% empty %}
